--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				</nav>
 
 				<div class="user-nav">
-					<a class="user-nav__link" href="#">87085381132</a>
+					<a class="user-nav__link" href="#">Болашак</a>
 					
 				</div>
 
